messing with hover lol

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
    
     
     <div class="row justify-content-evenly">
-      <div class="col-5 text-center">
+      <div id="left-side" class="col-5 text-center">
           <strong>Story Today In America</strong> 
         <div id="topStory"></div>
       </div>
       
 
-    <div class="col-7 text-center">
+    <div id="right-side" class="col-7 text-center">
       Newest New News
       <form id="newsSearch">
         <label id="topicSearch">
-            Search
+            <p id="hidden-text">If you get no results, you're probably looking yourself up</p>
           <input id="search" name="search" type="text" />
           <input type="submit" value="Get News" />
         </label>
