--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </div>
    
     
-    <div class="row justify-content-evenly">
-      <div id="left-side" class="col-5 text-center">
+    <div class="row sm-auto justify-content-evenly">
+      <div id="left-side" class="col-sm-5 text-center">
           <strong>Story Today In America</strong> 
         <div id="topStory"></div>
       </div>
       
 
-    <div id="right-side" class="col-7 text-center">
+    <div id="right-side" class="col-sm-7 text-center">
       Newest New News
       <form id="newsSearch">
         <label id="topicSearch">
